# sema

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  sema_claude_code_prompt.md  sema_subconversation_prompt.md
.claude/: launch.json
.streamlit/: config.toml
api/: Dockerfile  __init__.py  main.py  models.py  serialize.py
app/: cache.py  client_registry.py  db.py  insight_builder.py  main.py  obs.py  queries.py  query_router.py  settings.py  wiring.py
app/agent/: agent.py  prompts.py  response.py  safety.py  semantic.py  tools.py
app/components/: actions.py  alerts_engine.py  alerts_panel.py  charts.py  chat.py  kpi_cards.py  sidebar.py  styles.py  tables.py  theme.py
app/pages/: admin.py
config/: clients.yaml
data/: README.md  generate_data.py  load_data.py
docs/: architecture.md  backend_phase2_prompt.md  backend_review_prompt.md  extend_data_prompt.md  freeze_streamlit_prompt.md  mvp_scope.md  product_review_flow.md  product_review_prompt.md  project_vision.md
evals/: README.md  run_evals.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
sema_core/: __init__.py  alerts_engine.py  cache_report.py  client_registry.py  conversation_store.py  db.py  insight_builder.py  obs.py  overview.py  queries.py  settings.py  wiring.py
sql/: create_readonly_role.sql  schema.sql  validation_queries.sql
tests/: conftest.py  test_agent_run.py  test_api_chat.py  test_api_chat_stream.py  test_api_overview.py  test_cache_report.py  test_clarification_config.py  test_client_registry.py  test_conversation_api.py  test_conversation_store.py  test_conversations_api.py  test_evals_scoring.py  test_progress_and_sources.py  test_prompt_injection.py  test_response_builder.py  test_response_modes.py  test_safety.py  test_schema_cache.py  test_serialize.py  test_settings.py  test_streamlit_freeze.py  test_wiring_fallback.py
(+83 files in other folders)
