# SEMA backend packaging.
#
# Installed editable (pip install -e .) so the backend modules under app/ and
# the api/ package resolve WITHOUT sys.path hacks or PYTHONPATH=app. This is
# the incremental first step toward a proper sema_core/ package: same modules,
# same import names, now importable everywhere (Streamlit, FastAPI, pytest).
#
# Setup once per venv:
#   .venv\Scripts\python.exe -m pip install -e .

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sema-backend"
version = "0.1.0"
description = "SEMA - AI Business Advisor backend (agent, semantic layer, API)"
requires-python = ">=3.12"

[tool.setuptools]
# Top-level modules live in app/ (import as `db`, `wiring`, ...); the REST
# layer is the api/ package at the repo root.
package-dir = {"" = "app", "api" = "api"}
packages = ["agent", "components", "pages", "api"]
py-modules = [
    "cache",
    "client_registry",
    "db",
    "insight_builder",
    "main",
    "obs",
    "queries",
    "query_router",
    "settings",
    "wiring",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
