# SEMA backend packaging.
#
# Installed editable (pip install -e .) so `sema_core` (framework-free
# backend) and `api` (REST layer) import everywhere -- Streamlit, FastAPI,
# pytest, scripts -- with no sys.path hacks or PYTHONPATH. Streamlit UI code
# in app/ is NOT installed; `streamlit run app/main.py` resolves its own
# sibling modules (components/, pages/) from the script directory.
#
# Setup once per venv:
#   .venv\Scripts\python.exe -m pip install -e .

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sema-backend"
version = "0.2.0"
description = "SEMA - AI Business Advisor backend (agent, semantic layer, API)"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["sema_core", "sema_core.agent", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
